tests/error/integer_promotion_and_bool.c
// fail
_Bool ident_0 = ident_0 == (unsigned __int64 )'0' * ident_0;

